# LiveTrack

./: .dockerignore  .env_example  .gitattributes  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  redis.conf
src/: bot.py  main.py
src/api/: __init__.py  auth_routers.py  bot_dependencies.py  dependencies.py  habit_routers.py  task_routers.py  user_routers.py
src/config/: email.py  settings.py
src/core/: arq_redis.py  database.py  db_types.py  mixins.py  worker.py
src/migrations/: env.py
src/migrations/versions/: 5fa0ae148c40_updated_user_is_active_account_to_.py  6adbe272a2c0_initial_migration.py  7b01fef5dbfb_add_job_id_to_habit_model.py  958aced77413_add_telegram_chat_id_to_user.py
src/models/: __init__.py  habit.py  tag.py  task.py  user.py
src/queries/: habit_queries.py  task_queries.py  user_queries.py
src/schemas/: auth_dto.py  common_enums.py  habit_dto.py  tag_dto.py  task_dto.py  user_dto.py
src/security/: jwt_tokens.py  password_hashing.py  validators.py
src/services/: auth_services.py  telegram_sender.py  user_sevices.py
src/templates/emails/: verify_email.html
src/utils/: date_handling.py  validators.py
