[project]
name = "livetrack"
version = "0.3.0"
description = "Real-Time Task & Habit Tracker"
authors = [
    {name = "DarcRosya"}
]
license = {text = "MIT"}
requires-python = ">=3.12, <4.0"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "fastapi[all] (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "fastapi-mail (>=1.5.0,<2.0.0)",
    "pyotp (>=2.9.0,<3.0.0)",
    "arq (>=0.26.3,<0.27.0)",
    "sqlalchemy[asyncio] (>=2.0.43,<3.0.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "argon2-cffi (>=25.1.0,<26.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.10"
black = "^25.1.0"
pytest = "^8.4.1"

